# dp_rnn_movilidad_migracion

./: .gitignore  README.md  main.py  pyproject.toml
dp_rnn_movilidad_migracion/src/bounded_contexts/data/application/services/: conapo_data_service.py  inegi_data_service.py
dp_rnn_movilidad_migracion/src/bounded_contexts/data/domain/ports/: data_preprocessor.py  data_repository.py
dp_rnn_movilidad_migracion/src/bounded_contexts/migration_prediction/application/dto/: prediction_request_dto.py  prediction_result_dto.py
dp_rnn_movilidad_migracion/src/bounded_contexts/migration_prediction/application/services/: migration_prediction_service.py
dp_rnn_movilidad_migracion/src/bounded_contexts/migration_prediction/domain/entities/: prediction_result.py
dp_rnn_movilidad_migracion/src/bounded_contexts/migration_prediction/domain/ports/: data_preparation_port.py  model_builder_port.py  model_trainer_port.py  prediction_generator_port.py  prediction_repository_port.py  uncertainty_analyzer_port.py  (+1 more)
dp_rnn_movilidad_migracion/src/shared/domain/ports/: logger_port.py
dp_rnn_movilidad_migracion/src/shared/domain/services/: state_name_normalizer.py  state_selection_service.py
dp_rnn_movilidad_migracion/src/shared/domain/value_objects/: mexican_states.py
dp_rnn_movilidad_migracion/src/shared/infrastructure/: bootstrap.py
dp_rnn_movilidad_migracion/src/shared/infrastructure/di/: application_container.py
dp_rnn_movilidad_migracion/src/shared/infrastructure/factories/: logger_factory.py
scripts/: export_to_power_bi.py  generate_example_predictions.py
(+24 files in other folders)
